WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65497
maxlength = 0 on input is ignored
https://bugs.webkit.org/show_bug.cgi?id=65497
Summary
maxlength = 0 on input is ignored
Divya Manian
Reported
2011-08-01 16:39:52 PDT
I have no idea why anyone would do this, but it should be possible. Opera's latest snapshot, FF both do abide by maxlength.
Attachments
Patch
(3.98 KB, patch)
2011-08-18 19:32 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(8.90 KB, patch)
2011-08-18 22:47 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-08-01 23:56:34 PDT
Chromium bug:
http://code.google.com/p/chromium/issues/detail?id=89732
Shinya Kawanaka
Comment 2
2011-08-18 19:32:54 PDT
Created
attachment 104437
[details]
Patch
Kent Tamura
Comment 3
2011-08-18 19:57:19 PDT
Comment on
attachment 104437
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=104437&action=review
Thank you for fixing this. The change looks ok.
> LayoutTests/fast/forms/input-text-paste-maxlength.html:102 > +debug("pasting too much text with maxlength=0"); > +document.getElementById("l").focus(); > +document.execCommand("InsertHTML", false, "12x̲̅45"); > +shouldBe("domValueOf('l')", "''"); > +shouldBe("visibleValueOf('l')", "''"); > +
Would you add similar test cases to fast/forms/textarea-maxlength.html please?
Shinya Kawanaka
Comment 4
2011-08-18 22:47:19 PDT
Created
attachment 104463
[details]
Patch
Kent Tamura
Comment 5
2011-08-19 00:47:53 PDT
Comment on
attachment 104463
[details]
Patch Thanks!
WebKit Review Bot
Comment 6
2011-08-19 01:46:59 PDT
Comment on
attachment 104463
[details]
Patch Clearing flags on attachment: 104463 Committed
r93390
: <
http://trac.webkit.org/changeset/93390
>
WebKit Review Bot
Comment 7
2011-08-19 01:47:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug