input[maxlength=0] should ignore text input. https://bugs.webkit.org/show_bug.cgi?id=65497

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-08-19
Reviewed by Kent Tamura.

Source/WebCore:

Changed the valid range of maxlength.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::parseMaxLengthAttribute):
  Changed maxlength check condition.

LayoutTests:

* fast/forms/input-text-paste-maxlength-expected.txt:
  Added a case that maxlength=0
* fast/forms/input-text-paste-maxlength.html: ditto.
* fast/forms/script-tests/textarea-maxlength.js: ditto.
(createFocusedTextAreaWithMaxLength):
* fast/forms/textarea-maxlength-expected.txt: ditto.

Canonical link: https://commits.webkit.org/82380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93390 268f45cc-cd09-0410-ab3c-d52691b4dbfc